--- a/tekton/tasks-pipeline.yaml
+++ b/tekton/tasks-pipeline.yaml
@@ -9,7 +9,7 @@ spec:
     - name: image
       type: string
 
-  steps: 
+  steps:
     - name: build
       image: gcr.io/kaniko-project/executor:v1.5.1
       securityContext:
@@ -23,8 +23,6 @@ spec:
         - --digest-file=$(results.IMAGE_DIGEST.path)
         - --insecure
         - --skip-tls-verify
-      securityContext:
-        runAsUser: 0
 
     - name: deploy
       image: bitnami/kubectl:latest
@@ -39,6 +37,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
   name: build-deploy-pipeline
+  namespace: tekton-pipelines
 spec:
   workspaces:
     - name: source-code
