--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -4,6 +4,4 @@ metadata:
   name: db-credentials
 type: Opaque
 data:
-  username: bXl1c2Vy
-  password: bXlwYXNz
-  database: bXlkYg==
+  DB_PASS: bXlwYXNz
