--- a/tekton/tekton-pvc.yaml
+++ b/tekton/tekton-pvc.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: source-code-pvc # Nombre del PVC que utilizaremos en el Pod
+  name: tekton-pvc
 spec:
   accessModes:
-    - ReadWriteOnce # Solo un Pod puede acceder al volumen en modo de escritura a la vez
+    - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi # Tamaño solicitado del volumen (1Gi es suficiente para estos archivos)
-  storageClassName: standard # Usamos el almacenamiento predeterminado de Minikube
+      storage: 2Gi
