--- a/tekton/tekton-rbac.yaml
+++ b/tekton/tekton-rbac.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: default # Ajusta el namespace si es necesario
 subjects:
   - kind: ServiceAccount
-    name: your-service-account # Nombre del ServiceAccount
-    namespace: default # Namespace donde está el ServiceAccount
+    name: tekton-service-account # Cambiado de "your-service-account" a "tekton-service-account"
+    namespace: default # Asegúrate de que está en el namespace correcto
 roleRef:
   kind: Role
   name: admin # O el rol que tenga permisos suficientes para acceder al Secret
