--- a/tekton/build-and-push-task.yaml
+++ b/tekton/build-and-push-task.yaml
@@ -16,39 +16,38 @@ spec:
     - name: source
       mountPath: /workspace/source
     - name: artifacts
-      mountPath: /artifacts
+      mountPath: /workspace/artifacts # ¡CORREGIDO!
   steps:
     - name: kaniko-build
       image: gcr.io/kaniko-project/executor:debug
-      workingDir: /workspace/source # Cambia al directorio raíz del workspace
+      workingDir: /workspace/source
       command:
         - /kaniko/executor
       args:
-        - --dockerfile=$(params.CONTEXT_DIR)/Dockerfile # Ruta completa al Dockerfile
-        - --context=/workspace/source # Contexto es el workspace completo
+        - --dockerfile=$(params.CONTEXT_DIR)/Dockerfile
+        - --context=/workspace/source
         - --no-push
         - --destination=$(params.IMAGE)
-        - --tar-path=/artifacts/image.tar
+        - --tar-path=/workspace/artifacts/image.tar
 
-    # Step 2: Push con Crane
     - name: crane-push
       image: gcr.io/go-containerregistry/crane:debug
-      command: ["/bin/sh", "-c"] # Usamos /bin/sh para ejecutar múltiples comandos
+      command: ["/bin/sh", "-c"]
       args:
         - |
           crane auth login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" docker.io
-          crane push /artifacts/image.tar $(params.IMAGE) # Asegúrate de la ruta
+          crane push /workspace/artifacts/image.tar $(params.IMAGE) # Ajusta la ruta aquí también
       env:
         - name: DOCKER_USERNAME
           valueFrom:
             secretKeyRef:
-              name: dockerhub-credentials # Nombre del Secret
-              key: username # Clave dentro del Secret
+              name: dockerhub-credentials
+              key: username
         - name: DOCKER_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: dockerhub-credentials # Nombre del Secret
-              key: password # Clave dentro del Secret
-      volumeMounts: # Asegúrate de que el volumen artifacts esté montado
-        - name: artifacts # Nombre del volumen
-          mountPath: /artifacts # Debe coincidir con el mountPath del workspace
+              name: dockerhub-credentials
+              key: password
+      volumeMounts:
+        - name: artifacts
+          mountPath: /workspace/artifacts
