Refactor Tekton configurations; remove comments from PVC claim names and artifact mount paths for clarity

--- a/tekton/pipelineRun.yaml
+++ b/tekton/pipelineRun.yaml
@@ -11,7 +11,7 @@ spec:
         claimName: tekton-pvc
     - name: artifacts-workspace
       persistentVolumeClaim:
-        claimName: tekton-pvc-artifacts # Usamos el nuevo PVC
+        claimName: tekton-pvc-artifacts
   params:
     - name: IMAGE
       value: "docker.io/aramos20/myapi:latest"
