--- a/tekton/pipeline.yaml
+++ b/tekton/pipeline.yaml
@@ -8,15 +8,15 @@ spec:
       type: string
       default: "docker.io/aramos20/myapi:latest"
   workspaces:
-    - name: source-workspace # Nombre consistente
-    - name: artifacts-workspace # Nombre consistente
+    - name: source-workspace
+    - name: artifacts-workspace
   tasks:
     - name: clone-repo
       taskRef:
         name: git-clone-task
       workspaces:
         - name: output
-          workspace: source-workspace # Nombre consistente
+          workspace: source-workspace
 
     - name: build-and-push
       runAfter:
@@ -25,9 +25,9 @@ spec:
         name: build-and-push-task
       workspaces:
         - name: source
-          workspace: source-workspace # Nombre consistente
+          workspace: source-workspace
         - name: artifacts
-          workspace: artifacts-workspace # Nombre consistente
+          workspace: artifacts-workspace
       params:
         - name: IMAGE
           value: "$(params.IMAGE)"
@@ -39,4 +39,4 @@ spec:
         name: deploy-task
       workspaces:
         - name: source
-          workspace: source-workspace # Nombre consistente
+          workspace: source-workspace
