--- a/tekton/pipelineRun.yaml
+++ b/tekton/pipelineRun.yaml
@@ -6,12 +6,12 @@ spec:
   pipelineRef:
     name: ci-cd-pipeline
   workspaces:
-    - name: source-workspace
+    - name: shared-workspace # Este es el Workspace que requiere el Pipeline
       persistentVolumeClaim:
-        claimName: tekton-pvc
+        claimName: tekton-pvc # Usa el PVC que ya tienes configurado
     - name: artifacts-workspace
       persistentVolumeClaim:
-        claimName: tekton-pvc-artifacts
+        claimName: tekton-pvc-artifacts # El PVC para los artifacts de Kaniko
   params:
     - name: IMAGE
       value: "docker.io/aramos20/myapi:latest"
