--- a/tekton/tekton-tasks.yaml
+++ b/tekton/tekton-tasks.yaml
@@ -31,7 +31,6 @@ spec:
         fi
 
         echo "Dockerfile encontrado en /workspace/app/Dockerfile"
-
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
@@ -50,40 +49,29 @@ spec:
   workspaces:
     - name: source
       mountPath: /workspace
-    - name: artifacts
-      mountPath: /workspace/artifacts
   steps:
-    - name: kaniko-build
+    - name: kaniko-build-and-push
       image: gcr.io/kaniko-project/executor:debug
       workingDir: /workspace
       command:
         - /kaniko/executor
       args:
         - --dockerfile=$(params.CONTEXT_DIR)/Dockerfile
-        - --context=/workspace/source
-        - --no-push
+        - --context=/workspace
         - --destination=$(params.IMAGE)
-        - --tar-path=/workspace/artifacts/image.tar
         - --verbosity=debug
-    - name: crane-push
-      image: gcr.io/go-containerregistry/crane:debug
-      command: ["/bin/sh", "-c"]
-      args:
-        - |
-          crane auth login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD" docker.io
-          crane push /workspace/artifacts/image.tar $(params.IMAGE)
-      env:
-        - name: DOCKER_USERNAME
-          valueFrom:
-            secretKeyRef:
-              name: dockerhub-credentials
-              key: username
-        - name: DOCKER_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: dockerhub-credentials
-              key: password
-
+        - --insecure
+        - --skip-tls-verify
+      volumeMounts:
+        - name: kaniko-secret
+          mountPath: /kaniko/.docker
+  volumes:
+    - name: kaniko-secret
+      secret:
+        secretName: regcred
+        items:
+          - key: .dockerconfigjson
+            path: config.json
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
@@ -99,14 +87,21 @@ spec:
     - name: source
       mountPath: /workspace
   steps:
-    - name: deploy
-      image: bitnami/kubectl:latest
-      workingDir: /workspace/source
+    - name: copy-manifests
+      image: alpine/git:latest
+      workingDir: /workspace
       script: |
         #!/bin/sh
         set -ex
-        kubectl apply -f $(params.MANIFEST_DIR)/backend.yaml
-        kubectl apply -f $(params.MANIFEST_DIR)/configmap.yaml
-        kubectl apply -f $(params.MANIFEST_DIR)/frontend.yaml
-        kubectl apply -f $(params.MANIFEST_DIR)/postgres.yaml
-        kubectl apply -f $(params.MANIFEST_DIR)/secrets.yaml
+        cp -r $(params.MANIFEST_DIR)/* .
+    - name: deploy
+      image: bitnami/kubectl:latest
+      workingDir: /workspace
+      script: |
+        #!/bin/sh
+        set -ex
+        kubectl apply -f backend.yaml
+        kubectl apply -f configmap.yaml
+        kubectl apply -f frontend.yaml
+        kubectl apply -f postgres.yaml
+        kubectl apply -f secrets.yaml
