Update Dockerfile and backend configuration; modify source code copy command, change database environment value to 'release', and enhance resource limits for backend container

--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -13,13 +13,20 @@ spec:
       labels:
         app: backend
     spec:
-      serviceAccountName: tekton-service-account # ¡Agregado!
+      serviceAccountName: tekton-service-account
       imagePullSecrets:
-        - name: dockerhub-credentials # ¡Agregado!
+        - name: dockerhub-credentials
       containers:
         - name: backend
           image: docker.io/aramos20/myapi:latest
           imagePullPolicy: Always
+          resources:
+            limits:
+              cpu: "2"
+              memory: "2Gi"
+            requests:
+              cpu: "1"
+              memory: "1Gi
           ports:
             - containerPort: 5000
           env:
