--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -41,6 +41,13 @@ spec:
       containers:
         - name: frontend
           image: nginx:alpine
+          resources:
+            limits:
+              cpu: "2" #
+              memory: "2Gi"
+            requests:
+              cpu: "1"
+              memory: "1Gi
           ports:
             - containerPort: 80
           volumeMounts:
