--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -26,7 +26,7 @@ spec:
               memory: "2Gi"
             requests:
               cpu: "1"
-              memory: "1Gi
+              memory: "1Gi"
           ports:
             - containerPort: 5000
           env:
