--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -47,7 +47,7 @@ spec:
               memory: "2Gi"
             requests:
               cpu: "1"
-              memory: "1Gi
+              memory: "1Gi"
           ports:
             - containerPort: 80
           volumeMounts:
