Update Dockerfile; modify source code copy command and set working directory for application

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -43,7 +43,9 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 USER appuser
 
 # Copy the source code into the container.
-COPY app /app
+COPY . .
+
+WORKDIR /app/app
 
 # Expose the port that the application listens on.
 EXPOSE 5000
