Refactor Dockerfile and Kubernetes configurations; streamline pip installation, update database host, and reorder resource application in Tekton tasks

--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       serviceAccountName: tekton-service-account
       imagePullSecrets:
-        - name: dockerhub-credentials
+        - name: regcred
       containers:
         - name: backend
           image: docker.io/aramos20/myapi:latest
