Remove deprecated secrets.yaml and update pipelineRun.yaml to streamline workspace configuration; adjust tekton-tasks.yaml to eliminate insecure options and apply necessary manifests in deploy task.

--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -64,3 +64,11 @@ spec:
       port: 5432
       targetPort: 5432
   type: ClusterIP
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: db-credentials
+type: Opaque
+data:
+  DB_PASS: bXlwYXNz
