Update documentation and improve database connection handling; enhance README with project structure and directory descriptions, and refine Tekton pipeline details.

--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -43,7 +43,7 @@ spec:
           image: nginx:alpine
           resources:
             limits:
-              cpu: "2" #
+              cpu: "2"
               memory: "2Gi"
             requests:
               cpu: "1"
