--- a/tekton/tekton-tasks.yaml
+++ b/tekton/tekton-tasks.yaml
@@ -98,4 +98,7 @@ spec:
       script: |
         #!/bin/sh
         set -ex
-        kubectl apply -f .
+        kubectl apply -f configmap.yaml
+        kubectl apply -f postgres.yaml
+        kubectl apply -f backend.yaml
+        kubectl apply -f frontend.yaml
