--- a/k8s/backend.yaml
+++ b/k8s/backend.yaml
@@ -19,8 +19,8 @@ spec:
           imagePullPolicy: Always
           resources:
             limits:
-              cpu: "1"
-              memory: "1Gi"
+              memory: "128Mi"
+              cpu: "500m"
           ports:
             - containerPort: 5000
           env:
