--- a/tekton/tekton-infra.yaml
+++ b/tekton/tekton-infra.yaml
@@ -19,9 +19,19 @@ metadata:
 type: kubernetes.io/dockerconfigjson
 ---
 apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: admin-role
+  namespace: default
+rules:
+  - apiGroups: ["*"] # Todos los grupos de API
+    resources: ["*"] # Todos los recursos
+    verbs: ["*"] # Todas las acciones (get, list, create, update, delete, etc.)
+---
+apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: pipeline-run-access
+  name: admin-rolebinding
   namespace: default
 subjects:
   - kind: ServiceAccount
@@ -29,18 +39,5 @@ subjects:
     namespace: default
 roleRef:
   kind: Role
-  name: admin
-  apiGroup: rbac.authorization.k8s.io
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: tekton-service-account-admin-binding
-subjects:
-  - kind: ServiceAccount
-    name: tekton-service-account
-    namespace: default
-roleRef:
-  kind: ClusterRole
-  name: admin
+  name: admin-role
   apiGroup: rbac.authorization.k8s.io
