--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -61,7 +61,8 @@ spec:
   selector:
     app: postgres
   ports:
-    - protocol: TCP
+    - name: postgres
+      protocol: TCP
       port: 5432
       targetPort: 5432
   type: ClusterIP
