--- a/tekton/tekton-tasks.yaml
+++ b/tekton/tekton-tasks.yaml
@@ -25,12 +25,6 @@ spec:
         rm -rf /workspace/* /workspace/.[!.]* /workspace/..?*
         git clone $(params.url) . 
         git checkout $(params.revision)
-        if [ ! -f /workspace/Dockerfile ]; then
-          echo "Error: Dockerfile no encontrado en la raiz"
-          exit 1
-        fi
-
-        echo "Dockerfile encontrado en /workspace/Dockerfile"
 ---
 apiVersion: tekton.dev/v1beta1
 kind: Task
@@ -72,29 +66,17 @@ kind: Task
 metadata:
   name: deploy-task
 spec:
-  params:
-    - name: MANIFEST_DIR
-      description: "Directorio con los manifiestos de Kubernetes (relativo al workspace)"
-      type: string
-      default: "k8s"
   workspaces:
     - name: source
       mountPath: /workspace
   steps:
-    - name: copy-manifests
-      image: alpine/git:latest
-      workingDir: /workspace
-      script: |
-        #!/bin/sh
-        set -ex
-        cp -r $(params.MANIFEST_DIR)/* .
     - name: deploy
       image: bitnami/kubectl:latest
       workingDir: /workspace
       script: |
         #!/bin/sh
         set -ex
-        kubectl apply -f configmap.yaml
-        kubectl apply -f postgres.yaml
-        kubectl apply -f backend.yaml
-        kubectl apply -f frontend.yaml
+        kubectl apply -f k8s/configmap.yaml
+        kubectl apply -f k8s/postgres.yaml
+        kubectl apply -f k8s/backend.yaml
+        kubectl apply -f k8s/frontend.yaml
