--- a/tekton/tekton-infra.yaml
+++ b/tekton/tekton-infra.yaml
@@ -24,9 +24,9 @@ metadata:
   name: admin-role
   namespace: default
 rules:
-  - apiGroups: ["*"] # Todos los grupos de API
-    resources: ["*"] # Todos los recursos
-    verbs: ["*"] # Todas las acciones (get, list, create, update, delete, etc.)
+  - apiGroups: ["*"]
+    resources: ["*"]
+    verbs: ["*"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
